# lakehouse-ml-platform

./: MANIFEST.md  Makefile  README.md  databricks.yml  docker-compose.yml  pyproject.toml
airflow/dags/: cdc_batch_dag.py  medallion_daily_dag.py  ml_training_dag.py
cdc/debezium/: register-postgres.json  register.sh
cdc/postgres/: init.sql
ci/jenkins/: Jenkinsfile
conf/: base.yaml  dev.yaml  prod.yaml  qa.yaml
docs/: architecture.md  cdc.md  deployment.md  scaling_pinot_iceberg_flink.md
flink/: cdc_orders_to_iceberg.sql
infra/terraform/: main.tf  outputs.tf  providers.tf  variables.tf
infra/terraform/envs/: dev.tfvars  prod.tfvars  qa.tfvars
pinot/: orders_realtime_table.json  orders_schema.json
scripts/: bootstrap_local.sh  generate_oltp_traffic.py
snowflake/ddl/: 001_setup.sql  002_tables.sql
src/lakehouse/: __init__.py  cli.py
src/lakehouse/cdc/: batch.py  merge.py  streaming.py
src/lakehouse/common/: config.py  logging.py  secrets.py  spark.py
src/lakehouse/delivery/: snowflake_loader.py
src/lakehouse/ingestion/: kaggle_client.py  landing.py  reddit_client.py
src/lakehouse/medallion/: bronze.py  gold.py  silver.py
src/lakehouse/ml/: evaluate.py  features.py  registry.py  tracking.py  train_bert_torch.py  train_classical.py  train_tensorflow.py
src/lakehouse/ml/serving/: Dockerfile  app.py
src/lakehouse/quality/: __init__.py  expectations.py
tests/: conftest.py  test_cdc_merge.py  test_config.py  test_expectations.py  test_landing_polars.py  test_silver_transforms.py
