[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lakehouse-ml-platform"
version = "1.0.0"
description = "Production-grade Medallion lakehouse with real-time/batch CDC, Airflow orchestration and an ML/AI layer (sklearn, PyTorch/CUDA BERT, TensorFlow)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Andres" }]
dependencies = [
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "requests>=2.32",
    "polars>=1.6",
    "pandas>=2.2",
    "pyarrow>=16.0",
]

[project.optional-dependencies]
spark = [
    "pyspark==3.5.3",
    "delta-spark==3.2.1",
]
ml = [
    "scikit-learn>=1.5",
    "mlflow>=2.16",
    "torch>=2.4",
    "transformers>=4.44",
    "datasets>=2.21",
    "tensorflow>=2.17",
]
serving = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "mlflow>=2.16",
]
delivery = [
    "snowflake-connector-python[pandas]>=3.12",
]
cdc = [
    "psycopg2-binary>=2.9",
]
dev = [
    "ruff>=0.6",
    "black>=24.8",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pre-commit>=3.8",
    "types-PyYAML",
    "types-requests",
]

[project.scripts]
lakehouse = "lakehouse.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "PL"]
ignore = ["PLR0913", "PLR2004", "PLC0415", "N812", "PLW2901", "PLR0915"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=src/lakehouse --cov-report=term-missing"
markers = ["spark: tests requiring a local SparkSession"]
